--- a/package.json
+++ b/package.json
@@ -29,5 +29,15 @@
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.3.0",
     "tiny-lr": "^0.1.6"
-  }
+  },
+  "ignore": [
+    "node_modules",
+    "test",
+    "public",
+    "src",
+    "index.html",
+    "gulpfile.js",
+    "package.json",
+    ".gitignore"
+  ]
 }
